[package]
name = "ocpc_match"
version = "0.1.0"
authors = ["mengll <mll@anfeng.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb="1.1.1"
tokio = { version = "0.2", features = ["full"] }
rdkafka = { version = "0.24", features = ["cmake-build"] }
log = "0.4.11"
serde_json = "1.0"
serde = "1.0.118"
redis = "0.19.0"
async-std = "1.8.0"
#bson = "1.1.0"


  
